--- a/statistic-calculator-service/src/main/resources/application.properties
+++ b/statistic-calculator-service/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb://root:root@localhost:27017/csv_statistics
+spring.data.mongodb.uri=mongodb://localhost:27017/csvStatistics
